# BetterDiscordAutoInstaller

./: .gitignore  LICENSE  README.md  add_to_startup.py  build.py  funcs.py  installer.py  main.py  pyproject.toml  remove_from_startup.py  requirements.txt  settings.json  setup.py  starter.py  startup_manager.py  updater.py
config/: __init__.py  classes.py  constants.py  funcs.py  settings.py
macos/: auto-installer-mac.py  manual-installer-mac.py
plugins/: __init__.py  classes.py  funcs.py
utils/: __init__.py  betterdiscord.py  discord.py  github.py  other.py  update.py
